--- a/pages/sws-addDevice.html
+++ b/pages/sws-addDevice.html
@@ -29,8 +29,6 @@
       align-items: center;
       flex-direction: column;
       justify-content: center;
-      background-color: rgb(204, 204, 204);
-      opacity: 90%;
     }
 
     .app-content {
@@ -38,7 +36,7 @@
       width: 100%;
       display: flex;
       flex-direction: column;
-
+      background-color: rgba(204, 204, 204, 0.85);
     }
 
     .logout {
@@ -64,7 +62,7 @@
 
     .nav-header {
       width: 100%;
-      background-color: #222;
+      background-color: rgba(34, 34, 34, 0.95);
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -72,11 +70,13 @@
     }
 
     .nav-container {
+      position: relative;
       height: 70px;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #fff;
+      color: rgba(255, 255, 255, 0.8);
+
     }
 
     .nav-container .menu-item {
@@ -90,15 +90,15 @@
       align-items: center;
     }
 
-    .selected {
-      background-color: #444;
+    .nav-container .selected {
+      background-color: rgba(68, 68, 68, 0.8);
       border-bottom: 3px solid #ff5858 !important;
-      opacity: 85%;
+
     }
 
     .nav-container .menu-item.active,
     .nav-container .menu-item:hover {
-      background-color: #444;
+      background-color: rgba(68, 68, 68, 0.8);
       border-bottom-color: #ff5858;
     }
 
